<resources>
    <string name="app_name">FAAST</string>
    <string name="button_name">Pay Now</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="img">img</string>
    <string name="title_activity_home__new">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="payment_history">Payment History</string>
    <string name="faast_prime">FAAST Prime (New)</string>

    <string name="recharge_history">Recharge History</string>
    <string name="title_activity_home">Home</string>
    <string name="plan_change">Plan Change</string>
    <string name="contact_us">Contact Us</string>
    <string name="offers">Offers</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home_internet_status">HomeInternetStatus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_wi_fi">HomeWiFi</string>
    <string name="title_activity_hotspot_home">HotspotHome</string>
    <string name="title_activity_deactivated_cancelled_user_login">DeactivatedCancelledUserLogin
    </string>
    <string name="faast_prime_dialog"> <u>FAAST PRIME MEMBERSHIP</u></string>
</resources>
