<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:checkableBehavior="single"
        >
        <item
            android:id="@+id/hotspot_home_menu"
            android:icon="@mipmap/home2"
            android:title="@string/home" />
        <item
            android:id="@+id/recharge_history_hotspot"
            android:icon="@mipmap/paymeny_history2"
            android:title="@string/recharge_history"
            />
        <item
            android:id="@+id/contact_us_menu_hotspot"
            android:icon="@mipmap/support"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/version_menu_hotspot"
            android:icon="@mipmap/about"
            android:title="@string/about" />

    </group>


</menu>
